# fastapi_tutorial

./: README.md  pyproject.toml  students.json
app/: main.py  student.py  test.py  utils.py
