[tool.poetry]
name = "fastapiproject"
version = "0.1.0"
description = ""
authors = ["Artem Vimogradov <vinartgen@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
uvicorn = "^0.30.3"
requests = "^2.32.3"
json-db-lite = "^0.1.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
